src/builder/tests/select/snapshots/ciboulette2postgres__builder__tests__select__include__include_deep_nested.snap
---
source: src/builder/tests/select/include.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data_0" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $2,
      "public"."peoples"."age",
      $3,
      "public"."peoples"."first-name",
      $4,
      "public"."peoples"."gender",
      $5,
      "public"."peoples"."last-name",
      $6,
      "public"."peoples"."twitter"
    ) AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
  WHERE
    "public"."peoples"."id" = $7
),
"cte_rel_articles_data_1" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    "cte_peoples_data_0"."id" :: TEXT AS "related_id",
    $8 :: TEXT AS "related_type",
    $9 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $10,
      "public"."articles"."body",
      $11,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
    INNER JOIN "public"."people-article" ON "public"."people-article"."article_id" = "public"."articles"."id"
    INNER JOIN "cte_peoples_data_0" ON "cte_peoples_data_0"."main_id" = "public"."people-article"."people_id"
),
"cte_rel_comments_data_2" AS (
  SELECT
    "public"."comments"."id" :: TEXT AS "id",
    "public"."comments"."id" AS "main_id",
    "cte_rel_articles_data_1"."id" :: TEXT AS "related_id",
    $12 :: TEXT AS "related_type",
    $13 :: TEXT AS "type",
    JSON_BUILD_OBJECT($14, "public"."comments"."body") AS "data"
  FROM
    "public"."comments"
    INNER JOIN "cte_rel_articles_data_1" ON "cte_rel_articles_data_1"."main_id" = "public"."comments"."article"
),
"cte_rel_peoples_data_3" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    "cte_rel_comments_data_2"."id" :: TEXT AS "related_id",
    $15 :: TEXT AS "related_type",
    $16 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $17,
      "public"."peoples"."age",
      $18,
      "public"."peoples"."first-name",
      $19,
      "public"."peoples"."gender",
      $20,
      "public"."peoples"."last-name",
      $21,
      "public"."peoples"."twitter"
    ) AS "data"
  FROM
    "public"."peoples"
    INNER JOIN "cte_rel_comments_data_2" ON "cte_rel_comments_data_2"."rel_author" = "public"."peoples"."id"
),
"cte_rel_favorite_color_data_4" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    "cte_rel_peoples_data_3"."id" :: TEXT AS "related_id",
    $22 :: TEXT AS "related_type",
    $23 :: TEXT AS "type",
    JSON_BUILD_OBJECT($24, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "cte_rel_peoples_data_3" ON "cte_rel_peoples_data_3"."rel_favorite_color" = "public"."favorite_color"."id"
) (
  SELECT
    "cte_peoples_data_0"."id",
    "cte_peoples_data_0"."type",
    "cte_peoples_data_0"."data",
    "cte_peoples_data_0"."related_type",
    "cte_peoples_data_0"."related_id"
  FROM
    "cte_peoples_data_0"
)
UNION
ALL (
  SELECT
    "cte_rel_articles_data_1"."id",
    "cte_rel_articles_data_1"."type",
    "cte_rel_articles_data_1"."data",
    "cte_rel_articles_data_1"."related_type",
    "cte_rel_articles_data_1"."related_id"
  FROM
    "cte_rel_articles_data_1"
)
UNION
ALL (
  SELECT
    "cte_rel_comments_data_2"."id",
    "cte_rel_comments_data_2"."type",
    "cte_rel_comments_data_2"."data",
    "cte_rel_comments_data_2"."related_type",
    "cte_rel_comments_data_2"."related_id"
  FROM
    "cte_rel_comments_data_2"
)
UNION
ALL (
  SELECT
    "cte_rel_peoples_data_3"."id",
    "cte_rel_peoples_data_3"."type",
    "cte_rel_peoples_data_3"."data",
    "cte_rel_peoples_data_3"."related_type",
    "cte_rel_peoples_data_3"."related_id"
  FROM
    "cte_rel_peoples_data_3"
)
UNION
ALL (
  SELECT
    "cte_rel_favorite_color_data_4"."id",
    "cte_rel_favorite_color_data_4"."type",
    "cte_rel_favorite_color_data_4"."data",
    "cte_rel_favorite_color_data_4"."related_type",
    "cte_rel_favorite_color_data_4"."related_id"
  FROM
    "cte_rel_favorite_color_data_4"
);
